# moschain-master

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  mos.doxygen.in  mos.version.in  pipeline.jsonc  testnet.template
CMakeModules/: MASSigning.cmake  additionalPlugins.cmake  doxygen.cmake  mos-config.cmake.in  package.cmake
libraries/: CMakeLists.txt
libraries/chain/: CMakeLists.txt  abi_serializer.cpp  apply_context.cpp  asset.cpp  authorization_manager.cpp  block.cpp  block_header.cpp  block_header_state.cpp  block_log.cpp  block_state.cpp  chain_config.cpp  chain_id_type.cpp  controller.cpp  fork_database.cpp  genesis_intrinsics.cpp  genesis_state.cpp  genesis_state_root_key.cpp.in  merkle.cpp  mos_contract.cpp  mos_contract_abi.cpp  mos_contract_abi_bin.cpp  name.cpp  platform_timer_accuracy.cpp  platform_timer_asio_fallback.cpp  platform_timer_macos.cpp  platform_timer_posix.cpp  producer_schedule.cpp  protocol_feature_activation.cpp  protocol_feature_manager.cpp  protocol_state_object.cpp  resource_limits.cpp  snapshot.cpp  thread_utils.cpp  trace.cpp  transaction.cpp  transaction_context.cpp  transaction_metadata.cpp  wasm_interface.cpp  wasm_mos_binary_ops.cpp  wasm_mos_injection.cpp  (+3 more)
libraries/chain/include/mos/chain/: abi_def.hpp  abi_serializer.hpp  account_object.hpp  action.hpp  action_receipt.hpp  apply_context.hpp  asset.hpp  authority.hpp  authority_checker.hpp  authorization_manager.hpp  block.hpp  block_header.hpp  block_header_state.hpp  block_log.hpp  block_state.hpp  block_summary_object.hpp  block_timestamp.hpp  chain_config.hpp  chain_id_type.hpp  chain_snapshot.hpp  code_object.hpp  config.hpp  contract_table_objects.hpp  contract_types.hpp  controller.hpp  database_header_object.hpp  database_utils.hpp  exceptions.hpp  fixed_bytes.hpp  fixed_key.hpp  fork_database.hpp  generated_transaction_object.hpp  genesis_intrinsics.hpp  genesis_state.hpp  global_property_object.hpp  incremental_merkle.hpp  merkle.hpp  mos_contract.hpp  name.hpp  parallel_markers.hpp  (+30 more)
libraries/chain/include/mos/chain/webassembly/: common.hpp  mos-vm-oc.hpp  mos-vm.hpp  runtime_interface.hpp  wabt.hpp  wavm.hpp
libraries/chain/include/mos/chain/webassembly/mos-vm-oc/: code_cache.hpp  compile_monitor.hpp  compile_trampoline.hpp  config.hpp  executor.hpp  gs_seg_helpers.h  intrinsic.hpp  intrinsic_mapping.hpp  ipc_helpers.hpp  ipc_protocol.hpp  memory.hpp  mos-vm-oc.h  mos-vm-oc.hpp
libraries/chain/webassembly/: mos-vm-oc.cpp  mos-vm.cpp  wabt.cpp
libraries/chain/webassembly/mos-vm-oc/: About WAVM  LLVMEmitIR.cpp  LLVMJIT.cpp  LLVMJIT.h  code_cache.cpp  compile_monitor.cpp  compile_trampoline.cpp  executor.cpp  gs_seg_helpers.c  intrinsic.cpp  ipc_helpers.cpp  llvmWARshim.cpp  memory.cpp
libraries/chainbase/include/chainbase/: environment.hpp
libraries/fc/include/fc/crypto/: public_key.hpp
libraries/fc/src/crypto/: signature.cpp
libraries/fc/src/network/http/: http_client.cpp
libraries/fc/src/utf8/: utf8cpp.html
libraries/fc/test/crypto/: test_cypher_suites.cpp
libraries/mos-vm/: CMakeLists.txt  CONTRIBUTING.md  IMPORTANT.md  LICENSE  README.md
libraries/mos-vm/docs/: OVERVIEW.md
libraries/mos-vm/include/mos/vm/: allocator.hpp  backend.hpp  base_visitor.hpp  bitcode_writer.hpp  config.hpp  constants.hpp  debug_visitor.hpp  disassembly_visitor.hpp  error_codes.hpp  error_codes_def.hpp  error_codes_pp.hpp  exceptions.hpp  execution_context.hpp  guarded_ptr.hpp  host_function.hpp  (+19 more)
libraries/mos-vm/modules/: MOSVMBuildUtils.cmake
libraries/mos-vm/tools/: CMakeLists.txt  bench_interp.cpp  hello.wasm.hpp  hello_driver.cpp  interp.cpp
libraries/version/src/: version.cpp  version_impl.cpp.in  version_impl.hpp
libraries/wasm-jit/Include/Inline/: Serialization.h
libraries/wasm-jit/Source/WASM/: WASMSerialization.cpp
libraries/yubihsm/lib/: version.rc.in  version_winhttp.rc.in  version_winusb.rc.in
libraries/yubihsm/src/: version.rc.in
libraries/yubihsm/yhwrap/: version.rc.in
plugins/: COMMUNITY.md  mos-make_new_plugin.sh
plugins/chain_api_plugin/: CMakeLists.txt  chain_api_plugin.cpp
plugins/chain_plugin/: CMakeLists.txt  chain_plugin.cpp
plugins/db_size_api_plugin/: CMakeLists.txt  db_size_api_plugin.cpp
plugins/history_api_plugin/: CMakeLists.txt  history_api_plugin.cpp
plugins/history_plugin/: CMakeLists.txt  history_plugin.cpp
plugins/http_client_plugin/: CMakeLists.txt  http_client_plugin.cpp
plugins/http_plugin/: CMakeLists.txt  http_plugin.cpp
plugins/login_plugin/: CMakeLists.txt  login_plugin.cpp
plugins/mongo_db_plugin/: CMakeLists.txt  mongo_db_plugin.cpp
plugins/net_api_plugin/: CMakeLists.txt  net_api_plugin.cpp
plugins/net_plugin/: CMakeLists.txt  net_plugin.cpp
plugins/producer_api_plugin/: CMakeLists.txt  producer_api_plugin.cpp
plugins/producer_plugin/: CMakeLists.txt  producer_plugin.cpp
plugins/state_history_plugin/: CMakeLists.txt  state_history_plugin.cpp
plugins/template_plugin/: CMakeLists.txt  template_plugin.cpp
plugins/wallet_api_plugin/: CMakeLists.txt  wallet_api_plugin.cpp
plugins/wallet_plugin/: CMakeLists.txt  se_wallet.cpp  wallet.cpp  wallet_manager.cpp  wallet_plugin.cpp  yubihsm_wallet.cpp
programs/: CMakeLists.txt
programs/clmos/: CMakeLists.txt  config.hpp.in  help_text.cpp.in  help_text.hpp  httpc.cpp  httpc.hpp  localize.hpp  main.cpp  mosc.pot
programs/kmosd/: CMakeLists.txt  config.hpp.in  main.cpp
programs/mos-blocklog/: CMakeLists.txt  main.cpp
programs/mos-launcher/: CMakeLists.txt  config.hpp.in  main.cpp
programs/nodemos/: CMakeLists.txt  config.hpp.in  main.cpp
scripts/: .build_vars  .environment  CMakeLists.txt  generate_bottle.sh  generate_tarball.sh  mos-tn_bounce.sh  mos-tn_down.sh  mos-tn_roll.sh  mos-tn_up.sh  mos_build.sh  mos_build_amazonlinux.sh  mos_build_centos.sh  mos_build_darwin.sh  mos_build_ubuntu.sh  mos_install.sh  mos_uninstall.sh
scripts/helpers/: general.sh  mos.sh
tutorials/bios-boot-tutorial/: bios-boot-tutorial.py
tutorials/node-tools/: nodetool.py  nodetool_accounts.json  prodstool.py  prodstool_accounts.json
(+36 files in other folders)
